Optimizes web loading time

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\hevam_mxlc1ie\OneDrive\Documentos\Job related\Diseño web\reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="author" content="Hender S. Valdivia">
+    <meta name="description" content="Front end mentor practice">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles-sm.css">
+    <link rel="stylesheet" href="styles-md+.css" media="(min-width:768px)">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <title>News homepage</title>
 </head>
@@ -13,26 +16,28 @@
 <body>
     <header class="header-container p-resp">
         <figure class="header-logo">
-            <img src="assets\images\logo.svg">
+            <img src="assets\images\logo.svg" alt="logo">
         </figure>
         <nav class="header-nav">
-            <input value="toggled" type="checkbox" name="menu-toggle" id="menu-toggle-inp">
+            <input alt="toggle-input" value="toggled" type="checkbox" name="menu-toggle" id="menu-toggle-inp">
             <label class="menu-icon" for="menu-toggle-inp">
                 <img class="open-menu menu-img" src="assets\images\icon-menu.svg" alt="menu-icon">
-                <img class="close-menu menu-img" src="assets\images\icon-menu-close.svg" alt="menu-icon-close">
+                <img class="close-menu menu-img" src="assets\images\icon-menu-close.svg" alt="menu-icon-close"
+                    loading="lazy">
             </label>
             <ul class="nav-options">
-                <li><a href="">Home</a></li>
-                <li><a href="">New</a></li>
-                <li><a href="">Popular</a></li>
-                <li><a href="">Trending</a></li>
-                <li><a href="">Categories</a></li>
+                <li><a href="http://hvaldivia.infinityfreeapp.com/">Home</a></li>
+                <li><a href="http://hvaldivia.infinityfreeapp.com/">New</a></li>
+                <li><a href="http://hvaldivia.infinityfreeapp.com/">Popular</a></li>
+                <li><a href="http://hvaldivia.infinityfreeapp.com/">Trending</a></li>
+                <li><a href="http://hvaldivia.infinityfreeapp.com/">Categories</a></li>
             </ul>
         </nav>
     </header>
     <main class="main-container p-resp">
         <figure class="main-img">
-            <img src="assets\images\image-web-3-mobile.jpg">
+            <source media="(min-width:768px)" srcset="assets\images\image-web-3-desktop.jpg">
+            <img src="assets\images\image-web-3-mobile.jpg" class="poster" alt="poster1">
         </figure>
         <h1 class="main-title">The Bright Future of Web 3.0?</h1>
         <div class="main-text">
@@ -49,19 +54,22 @@
             </h2>
             <div class="aside-item-container">
                 <aside class="aside-item">
-                    <a href="" class="aside-item-title">Hydrogen VS Electric Cars</a>
+                    <a href="http://hvaldivia.infinityfreeapp.com/" class="aside-item-title">Hydrogen VS Electric
+                        Cars</a>
                     <p>
                         Will hydrogen-fueled cars ever catch up to EVs?
                     </p>
                 </aside>
                 <aside class="aside-item">
-                    <a href="" class="aside-item-title">The Downsides of AI Artistry</a>
+                    <a href="http://hvaldivia.infinityfreeapp.com/" class="aside-item-title">The Downsides of AI
+                        Artistry</a>
                     <p>
                         What are the possible adverse effects of on-demand AI image generation?
                     </p>
                 </aside>
                 <aside class="aside-item">
-                    <a href="" class="aside-item-title">Is VC Funding Drying Up?</a>
+                    <a href="http://hvaldivia.infinityfreeapp.com/" class="aside-item-title">Is VC Funding Drying
+                        Up?</a>
                     <p>
                         Private funding by VC firms is down 50% YOY. We take a look at what that means.
                     </p>
@@ -72,11 +80,11 @@
     <footer class="footer-container p-resp">
         <aside class="footer-aside">
             <figure class="footer-aside-figure">
-                <img src="assets\images\image-retro-pcs.jpg">
+                <img src="assets\images\image-retro-pcs.jpg" alt="footer-img1">
             </figure>
             <div class="footer-aside-text">
                 <h2>01</h2>
-                <a href="" class="footer-aside-title">Reviving Retro PCs</a>
+                <a href="http://hvaldivia.infinityfreeapp.com/" class="footer-aside-title">Reviving Retro PCs</a>
                 <p>
                     What happens when old PCs are given modern upgrades?
                 </p>
@@ -84,11 +92,12 @@
         </aside>
         <aside class="footer-aside footer-aside-middle">
             <figure class="footer-aside-figure">
-                <img src="assets\images\image-top-laptops.jpg">
+                <img src="assets\images\image-top-laptops.jpg" alt="footer-img2">
             </figure>
             <div class="footer-aside-text">
                 <h2>02</h2>
-                <a href="" class="footer-aside-title">Top 10 Laptops of 2022</a href="">
+                <a href="http://hvaldivia.infinityfreeapp.com/" class="footer-aside-title">Top 10 Laptops of 2022</a
+                    href="http://hvaldivia.infinityfreeapp.com/">
                 <p>
                     Our best picks for various needs and budgets.
                 </p>
@@ -96,21 +105,21 @@
         </aside>
         <aside class="footer-aside">
             <figure class="footer-aside-figure">
-                <img src="assets\images\image-gaming-growth.jpg">
+                <img src="assets\images\image-gaming-growth.jpg" alt="footer-img3">
             </figure>
             <div class="footer-aside-text">
                 <h2>03</h2>
-                <a href="" class="footer-aside-title">The Growth of Gaming</a href="">
+                <a href="http://hvaldivia.infinityfreeapp.com/" class="footer-aside-title">The Growth of Gaming</a
+                    href="http://hvaldivia.infinityfreeapp.com/">
                 <p>
                     How the pandemic has sparked fresh opportunities.
                 </p>
             </div>
         </aside>
     </footer>
-    <script src="index.js"></script>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Hender S. Valdivia</a>.
+        Coded by <a href="https://github.com/hendervm" target="_blank">Hender S. Valdivia</a>.
     </div>
 </body>
 
