--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     loading="lazy">
             </label>
             <ul class="nav-options">
-                <li><a href="http://hvaldivia.infinityfreeapp.com/">Home</a></li>
-                <li><a href="http://hvaldivia.infinityfreeapp.com/">New</a></li>
-                <li><a href="http://hvaldivia.infinityfreeapp.com/">Popular</a></li>
-                <li><a href="http://hvaldivia.infinityfreeapp.com/">Trending</a></li>
-                <li><a href="http://hvaldivia.infinityfreeapp.com/">Categories</a></li>
+                <li><a href="https://hendervm.github.io/news-homepage-main/">Home</a></li>
+                <li><a href="https://hendervm.github.io/news-homepage-main/">New</a></li>
+                <li><a href="https://hendervm.github.io/news-homepage-main/">Popular</a></li>
+                <li><a href="https://hendervm.github.io/news-homepage-main/">Trending</a></li>
+                <li><a href="https://hendervm.github.io/news-homepage-main/">Categories</a></li>
             </ul>
         </nav>
     </header>
@@ -54,21 +54,21 @@
             </h2>
             <div class="aside-item-container">
                 <aside class="aside-item">
-                    <a href="http://hvaldivia.infinityfreeapp.com/" class="aside-item-title">Hydrogen VS Electric
+                    <a href="https://hendervm.github.io/news-homepage-main/" class="aside-item-title">Hydrogen VS Electric
                         Cars</a>
                     <p>
                         Will hydrogen-fueled cars ever catch up to EVs?
                     </p>
                 </aside>
                 <aside class="aside-item">
-                    <a href="http://hvaldivia.infinityfreeapp.com/" class="aside-item-title">The Downsides of AI
+                    <a href="https://hendervm.github.io/news-homepage-main/" class="aside-item-title">The Downsides of AI
                         Artistry</a>
                     <p>
                         What are the possible adverse effects of on-demand AI image generation?
                     </p>
                 </aside>
                 <aside class="aside-item">
-                    <a href="http://hvaldivia.infinityfreeapp.com/" class="aside-item-title">Is VC Funding Drying
+                    <a href="https://hendervm.github.io/news-homepage-main/" class="aside-item-title">Is VC Funding Drying
                         Up?</a>
                     <p>
                         Private funding by VC firms is down 50% YOY. We take a look at what that means.
@@ -84,7 +84,7 @@
             </figure>
             <div class="footer-aside-text">
                 <h2>01</h2>
-                <a href="http://hvaldivia.infinityfreeapp.com/" class="footer-aside-title">Reviving Retro PCs</a>
+                <a href="https://hendervm.github.io/news-homepage-main/" class="footer-aside-title">Reviving Retro PCs</a>
                 <p>
                     What happens when old PCs are given modern upgrades?
                 </p>
@@ -96,8 +96,8 @@
             </figure>
             <div class="footer-aside-text">
                 <h2>02</h2>
-                <a href="http://hvaldivia.infinityfreeapp.com/" class="footer-aside-title">Top 10 Laptops of 2022</a
-                    href="http://hvaldivia.infinityfreeapp.com/">
+                <a href="https://hendervm.github.io/news-homepage-main/" class="footer-aside-title">Top 10 Laptops of 2022</a
+                    href="https://hendervm.github.io/news-homepage-main/">
                 <p>
                     Our best picks for various needs and budgets.
                 </p>
@@ -109,8 +109,8 @@
             </figure>
             <div class="footer-aside-text">
                 <h2>03</h2>
-                <a href="http://hvaldivia.infinityfreeapp.com/" class="footer-aside-title">The Growth of Gaming</a
-                    href="http://hvaldivia.infinityfreeapp.com/">
+                <a href="https://hendervm.github.io/news-homepage-main/" class="footer-aside-title">The Growth of Gaming</a
+                    href="https://hendervm.github.io/news-homepage-main/">
                 <p>
                     How the pandemic has sparked fresh opportunities.
                 </p>
