--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </nav>
     </header>
     <main class="main-container p-resp">
-        <figure class="main-img">
-            <source media="(min-width:768px)" srcset="assets\images\image-web-3-desktop.jpg">
+        <picture class="main-img">
+            <source media="(min-width:992px)" srcset="assets\images\image-web-3-desktop.jpg">
             <img src="assets\images\image-web-3-mobile.jpg" class="poster" alt="poster1">
-        </figure>
+        </picture>
         <h1 class="main-title">The Bright Future of Web 3.0?</h1>
         <div class="main-text">
             <p>
@@ -54,21 +54,24 @@
             </h2>
             <div class="aside-item-container">
                 <aside class="aside-item">
-                    <a href="https://hendervm.github.io/news-homepage-main/" class="aside-item-title">Hydrogen VS Electric
+                    <a href="https://hendervm.github.io/news-homepage-main/" class="aside-item-title">Hydrogen VS
+                        Electric
                         Cars</a>
                     <p>
                         Will hydrogen-fueled cars ever catch up to EVs?
                     </p>
                 </aside>
                 <aside class="aside-item">
-                    <a href="https://hendervm.github.io/news-homepage-main/" class="aside-item-title">The Downsides of AI
+                    <a href="https://hendervm.github.io/news-homepage-main/" class="aside-item-title">The Downsides of
+                        AI
                         Artistry</a>
                     <p>
                         What are the possible adverse effects of on-demand AI image generation?
                     </p>
                 </aside>
                 <aside class="aside-item">
-                    <a href="https://hendervm.github.io/news-homepage-main/" class="aside-item-title">Is VC Funding Drying
+                    <a href="https://hendervm.github.io/news-homepage-main/" class="aside-item-title">Is VC Funding
+                        Drying
                         Up?</a>
                     <p>
                         Private funding by VC firms is down 50% YOY. We take a look at what that means.
@@ -84,7 +87,8 @@
             </figure>
             <div class="footer-aside-text">
                 <h2>01</h2>
-                <a href="https://hendervm.github.io/news-homepage-main/" class="footer-aside-title">Reviving Retro PCs</a>
+                <a href="https://hendervm.github.io/news-homepage-main/" class="footer-aside-title">Reviving Retro
+                    PCs</a>
                 <p>
                     What happens when old PCs are given modern upgrades?
                 </p>
@@ -96,8 +100,8 @@
             </figure>
             <div class="footer-aside-text">
                 <h2>02</h2>
-                <a href="https://hendervm.github.io/news-homepage-main/" class="footer-aside-title">Top 10 Laptops of 2022</a
-                    href="https://hendervm.github.io/news-homepage-main/">
+                <a href="https://hendervm.github.io/news-homepage-main/" class="footer-aside-title">Top 10 Laptops of
+                    2022</a href="https://hendervm.github.io/news-homepage-main/">
                 <p>
                     Our best picks for various needs and budgets.
                 </p>
@@ -109,8 +113,8 @@
             </figure>
             <div class="footer-aside-text">
                 <h2>03</h2>
-                <a href="https://hendervm.github.io/news-homepage-main/" class="footer-aside-title">The Growth of Gaming</a
-                    href="https://hendervm.github.io/news-homepage-main/">
+                <a href="https://hendervm.github.io/news-homepage-main/" class="footer-aside-title">The Growth of
+                    Gaming</a href="https://hendervm.github.io/news-homepage-main/">
                 <p>
                     How the pandemic has sparked fresh opportunities.
                 </p>
