disable scroll when menu toggled

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="assets\images\logo.svg" alt="logo">
         </figure>
         <nav class="header-nav">
-            <input alt="toggle-input" value="toggled" type="checkbox" name="menu-toggle" id="menu-toggle-inp">
+            <input alt="toggle-input" type="checkbox" name="menu-toggle" id="menu-toggle-inp">
             <label class="menu-icon" for="menu-toggle-inp">
                 <img class="open-menu menu-img" src="assets\images\icon-menu.svg" alt="menu-icon">
                 <img class="close-menu menu-img" src="assets\images\icon-menu-close.svg" alt="menu-icon-close"
@@ -125,6 +125,7 @@
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="https://github.com/hendervm" target="_blank">Hender S. Valdivia</a>.
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
