--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main class="main-container p-resp">
         <picture class="main-img">
             <source media="(min-width:992px)" srcset="assets\images\image-web-3-desktop.jpg">
-            <img src="assets\images\image-web-3-mobile.jpg" class="poster" alt="poster1">
+            <img src="assets\images\image-web-3-mobile.jpg" class="poster" alt="poster">
         </picture>
         <h1 class="main-title">The Bright Future of Web 3.0?</h1>
         <div class="main-text">
